# todo-rs

./: Cargo.toml  README.md
src/: arg_parsing.rs  command.rs  lib.rs  main.rs
tests/: functional_tests.rs
