[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"
authors = ["Magnus Balzer <magnus.balzer@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
toml = "0.5.9"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"
